--- a/software/public/css/style.css
+++ b/software/public/css/style.css
@@ -2,11 +2,23 @@ body {
     background: #f8f8f8;
 }
 
-.settings,
 .chart {
     padding: 20px;
     height: 60vh;
     width: 95%;
+}
+
+.settings {
+    width: 95%;
+}
+
+.mm-card {
+    margin: 20px;
+    padding: 10px;
+}
+
+.invalid-mask {
+    color: red;
 }
 
 .d3-chart {
@@ -14,3 +26,4 @@ body {
     height: 100%;
     background: #ffffff;
 }
+
